added navigation links

--- a/about.html
+++ b/about.html
@@ -4,6 +4,12 @@
     <title>About</title>
   </head>
   <body>
+    <ul style="display: flex; justify-content: space-around; list-style: none;">
+      <li><a style="text-decoration: none;color: black; " href="./">Home</a></li>
+      <li><a style="text-decoration: none; color: black"  href="./services.html">Services</a></li>
+      <li><a style="text-decoration: none; color: blue;" href="./about.html">About</a></li>
+      <li><a style="text-decoration: none; color: black;" href="./contact.html">Contact</a></li>
+    </ul>
     <h1>About Page</h1>
   </body>
 </html>
