--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <title>Home</title>
   </head>
   <body>
+    <ul style="display: flex; justify-content: space-around; list-style: none;">
+      <li><a style="text-decoration: none;color: blue; " href="./">Home</a></li>
+      <li><a style="text-decoration: none; color: black;"  href="./services.html">Services</a></li>
+      <li><a style="text-decoration: none; color: black;" href="./about.html">About</a></li>
+      <li><a style="text-decoration: none; color: black;" href="./contact.html">Contact</a></li>
+    </ul>
     <h1>Home Page Got Updated</h1>
   </body>
 </html>
