--- a/services.html
+++ b/services.html
@@ -4,6 +4,12 @@
     <title>Services</title>
   </head>
   <body>
+    <ul style="display: flex; justify-content: space-around; list-style: none;">
+      <li><a style="text-decoration: none;color: black; " href="./">Home</a></li>
+      <li><a style="text-decoration: none; color: blue"  href="./services.html">Services</a></li>
+      <li><a style="text-decoration: none; color: black;" href="./about.html">About</a></li>
+      <li><a style="text-decoration: none; color: black;" href="./contact.html">Contact</a></li>
+    </ul>
     <h1>Services Page</h1>
   </body>
 </html>
